Change stylesheet and script links to relative paths
Updated stylesheet and script paths to use relative URLs.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GreenCut Lawn Care | Free Estimates</title>
   <meta name="description" content="Professional lawn mowing, trimming, edging, cleanup, and mulching. Free estimates. Fast & reliable service." />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -254,6 +254,6 @@
     💬 Text Us
   </a>
 
-  <script src="js/script.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
