--- a/index.html
+++ b/index.html
@@ -1,259 +1,106 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GreenCut Lawn Care | Free Estimates</title>
-  <meta name="description" content="Professional lawn mowing, trimming, edging, cleanup, and mulching. Free estimates. Fast & reliable service." />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GreenCut Lawn Care | Presupuesto Gratis</title>
   <link rel="stylesheet" href="./style.css">
 </head>
-
 <body>
-  <!-- Top Bar -->
-  <div class="topbar">
-    <div class="container topbar__inner">
-      <div class="topbar__left">
-        <span>📞 (267) 000-0000</span>
-        <span class="sep">•</span>
-        <span>✉️ greencut@example.com</span>
-      </div>
-      <a class="topbar__cta" href="#quote">Get a Free Estimate</a>
+
+<div class="topbar">
+  <div class="container">
+    <span>📞 (267) 000-0000</span>
+    <span>✉️ greencut@example.com</span>
+    <a href="#quote">Presupuesto gratis</a>
+  </div>
+</div>
+
+<header class="header">
+  <div class="container header-flex">
+    <h1 class="logo">GreenCut</h1>
+    <nav>
+      <a href="#home">Inicio</a>
+      <a href="#services">Servicios</a>
+      <a href="#about">Nosotros</a>
+      <a href="#reviews">Reseñas</a>
+      <a href="#contact">Contacto</a>
+    </nav>
+  </div>
+</header>
+
+<section class="hero" id="home">
+  <div class="hero-overlay"></div>
+  <div class="container hero-content">
+    <h2>Cuidado profesional del césped y landscaping</h2>
+    <p>Servicio confiable, rápido y a buen precio. Jardines limpios todo el año.</p>
+    <div class="hero-buttons">
+      <a class="btn primary" href="#quote">Cotización gratis</a>
+      <a class="btn ghost" href="#services">Ver servicios</a>
     </div>
   </div>
+</section>
 
-  <!-- Header -->
-  <header class="header" id="home">
-    <div class="container header__inner">
-      <a class="brand" href="#home" aria-label="GreenCut Lawn Care">
-        <div class="brand__logo">
-          <!-- Si no tenés logo, esto sirve como placeholder -->
-          <span>GC</span>
-        </div>
-        <div class="brand__text">
-          <strong>GreenCut</strong>
-          <span>Lawn Care</span>
-        </div>
-      </a>
+<section class="quote" id="quote">
+  <div class="container">
+    <h2>Solicitar cotización</h2>
+    <form id="quoteForm">
+      <input type="text" placeholder="Nombre" required>
+      <input type="email" placeholder="Correo electrónico" required>
+      <input type="tel" placeholder="Teléfono" required>
+      <input type="text" placeholder="Dirección" required>
+      <textarea placeholder="Servicio requerido" required></textarea>
+      <button type="submit">Enviar</button>
+      <p id="formMsg"></p>
+    </form>
+  </div>
+</section>
 
-      <button class="nav__toggle" id="navToggle" aria-label="Open menu">☰</button>
-
-      <nav class="nav" id="nav">
-        <a href="#home" class="nav__link">Home</a>
-        <a href="#services" class="nav__link">Services</a>
-        <a href="#about" class="nav__link">About</a>
-        <a href="#reviews" class="nav__link">Reviews</a>
-        <a href="#contact" class="nav__link">Contact</a>
-      </nav>
+<section class="services" id="services">
+  <div class="container">
+    <h2>Servicios</h2>
+    <div class="services-grid">
+      <div class="service">🌿 Corte de césped</div>
+      <div class="service">✂️ Recorte y bordes</div>
+      <div class="service">🍃 Limpieza de hojas</div>
+      <div class="service">🌱 Mulch</div>
+      <div class="service">🧹 Limpieza general</div>
+      <div class="service">❄️ Remoción de nieve</div>
     </div>
-  </header>
+  </div>
+</section>
 
-  <!-- Hero -->
-  <section class="hero">
-    <div class="hero__bg" role="img" aria-label="Lawn care service"></div>
-    <div class="container hero__content">
-      <div class="hero__left">
-        <h1>Professional Lawn Care & Landscaping</h1>
-        <p>
-          Reliable, affordable, and clean work.
-          We keep your yard looking sharp all season. 🌿✂️
-        </p>
+<section class="about" id="about">
+  <div class="container">
+    <h2>Sobre nosotros</h2>
+    <p>Somos un negocio local comprometido con un trabajo limpio y puntual.</p>
+  </div>
+</section>
 
-        <div class="hero__actions">
-          <a class="btn btn--primary" href="#quote">Free Estimate</a>
-          <a class="btn btn--ghost" href="#services">View Services</a>
-        </div>
-
-        <div class="hero__badges">
-          <div class="badge">✅ Same-week service</div>
-          <div class="badge">✅ Residential & commercial</div>
-          <div class="badge">✅ Fair pricing</div>
-        </div>
-      </div>
-
-      <!-- Quote Form Card -->
-      <div class="card" id="quote">
-        <h2>Request a Quote</h2>
-        <p class="muted">Fill this out and we’ll get back to you fast.</p>
-
-        <form id="quoteForm">
-          <label>
-            Name
-            <input type="text" name="name" placeholder="Your name" required />
-          </label>
-
-          <label>
-            Email
-            <input type="email" name="email" placeholder="you@email.com" required />
-          </label>
-
-          <label>
-            Phone Number
-            <input type="tel" name="phone" placeholder="(###) ###-####" required />
-          </label>
-
-          <label>
-            Address
-            <input type="text" name="address" placeholder="Street, City" required />
-          </label>
-
-          <label>
-            Service Needed
-            <textarea name="service" rows="4" placeholder="Lawn mowing, trimming, cleanup, mulching..." required></textarea>
-          </label>
-
-          <button class="btn btn--primary btn--full" type="submit">Submit</button>
-          <p class="form__note" id="formNote" aria-live="polite"></p>
-        </form>
-      </div>
+<section class="reviews" id="reviews">
+  <div class="container">
+    <h2>Reseñas</h2>
+    <div class="reviews-grid">
+      <div class="review">Excelente servicio, muy recomendados.</div>
+      <div class="review">Mi jardín quedó perfecto.</div>
+      <div class="review">Rápidos y profesionales.</div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- Services -->
-  <section class="section" id="services">
-    <div class="container">
-      <div class="section__head">
-        <h2>Services</h2>
-        <p class="muted">Everything you need to keep your property looking fresh.</p>
-      </div>
+<section class="contact" id="contact">
+  <div class="container">
+    <h2>Contacto</h2>
+    <p>📞 (267) 000-0000</p>
+    <p>✉️ greencut@example.com</p>
+  </div>
+</section>
 
-      <div class="grid">
-        <article class="service">
-          <div class="service__icon">🌿</div>
-          <h3>Lawn Mowing</h3>
-          <p>Clean cuts, consistent schedule, and sharp lines.</p>
-          <a class="link" href="#contact">Learn more</a>
-        </article>
+<footer>
+  <p>© <span id="year"></span> GreenCut Lawn Care</p>
+</footer>
 
-        <article class="service">
-          <div class="service__icon">✂️</div>
-          <h3>Trimming & Edging</h3>
-          <p>Edges that look like they were drawn with a ruler.</p>
-          <a class="link" href="#contact">Learn more</a>
-        </article>
-
-        <article class="service">
-          <div class="service__icon">🍃</div>
-          <h3>Leaf Cleanup</h3>
-          <p>Seasonal cleanup, bagging, and hauling away.</p>
-          <a class="link" href="#contact">Learn more</a>
-        </article>
-
-        <article class="service">
-          <div class="service__icon">🌱</div>
-          <h3>Mulching</h3>
-          <p>Fresh mulch install to make beds pop and protect plants.</p>
-          <a class="link" href="#contact">Learn more</a>
-        </article>
-
-        <article class="service">
-          <div class="service__icon">🧼</div>
-          <h3>Yard Cleanup</h3>
-          <p>Branches, debris, overgrowth, and general yard reset.</p>
-          <a class="link" href="#contact">Learn more</a>
-        </article>
-
-        <article class="service">
-          <div class="service__icon">❄️</div>
-          <h3>Snow Removal</h3>
-          <p>Driveways and walkways cleared quickly in winter.</p>
-          <a class="link" href="#contact">Learn more</a>
-        </article>
-      </div>
-    </div>
-  </section>
-
-  <!-- About -->
-  <section class="section section--alt" id="about">
-    <div class="container split">
-      <div>
-        <h2>About Us</h2>
-        <p class="muted">
-          We’re a local team focused on quality work and good communication.
-          If we say we’re coming, we show up. Simple as that.
-        </p>
-        <ul class="checklist">
-          <li>Licensed & insured (if applies)</li>
-          <li>Free estimates</li>
-          <li>Respectful, clean, professional</li>
-        </ul>
-      </div>
-
-      <div class="aboutCard">
-        <h3>Service Area</h3>
-        <p class="muted">Southeast PA (edit this for your area)</p>
-        <div class="chips">
-          <span class="chip">Hatfield</span>
-          <span class="chip">Lansdale</span>
-          <span class="chip">Montgomery County</span>
-          <span class="chip">Bucks County</span>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Reviews -->
-  <section class="section" id="reviews">
-    <div class="container">
-      <div class="section__head">
-        <h2>Customer Reviews</h2>
-        <p class="muted">Real words from real neighbors.</p>
-      </div>
-
-      <div class="grid grid--3">
-        <article class="review">
-          <p>“Came on time, my yard looked brand new. Great price.”</p>
-          <span class="review__name">– Mike R.</span>
-        </article>
-        <article class="review">
-          <p>“Edges were crisp, cleanup was spotless. 10/10.”</p>
-          <span class="review__name">– Sarah T.</span>
-        </article>
-        <article class="review">
-          <p>“Quick response and super professional. Highly recommend.”</p>
-          <span class="review__name">– David L.</span>
-        </article>
-      </div>
-    </div>
-  </section>
-
-  <!-- Contact -->
-  <section class="section section--alt" id="contact">
-    <div class="container split">
-      <div>
-        <h2>Contact</h2>
-        <p class="muted">Call, text, or request a quote. We reply fast.</p>
-
-        <div class="contactList">
-          <div>📞 <strong>(267) 000-0000</strong></div>
-          <div>✉️ <strong>greencut@example.com</strong></div>
-          <div>🕒 <strong>Mon-Sat</strong> 7AM – 6PM</div>
-        </div>
-
-        <a class="btn btn--primary" href="#quote">Get a Free Estimate</a>
-      </div>
-
-      <div class="mapBox">
-        <p class="muted">
-          Optional: Here you can embed a Google Map later, or put “Service Area”.
-        </p>
-        <div class="mapFake">MAP / SERVICE AREA</div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="footer">
-    <div class="container footer__inner">
-      <p>© <span id="year"></span> GreenCut Lawn Care. All rights reserved.</p>
-      <a class="link" href="#home">Back to top ↑</a>
-    </div>
-  </footer>
-
-  <!-- WhatsApp floating button (cambia el número) -->
-  <a class="whatsapp" href="https://wa.me/12670000000" target="_blank" rel="noopener">
-    💬 Text Us
-  </a>
-
-  <script src="./script.js"></script>
+<script src="./script.js"></script>
 </body>
 </html>
+
